# PersonalDocAI

./: .env_example  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
data/input/: person.md  test_analysis.md
src/familydoc_ai/: agent.py  app.py  rag.py
src/familydoc_ai/prompting/: config_reasoning.yaml  output_schema.py  prompt_builder.py  system_prompt.yaml  utils.py
